[gd_scene load_steps=4 format=3 uid="uid://vofbr6ovv224"]

[ext_resource type="Script" uid="uid://dr4kerwvyftig" path="res://Nodes/EnvironmentNodes/mud_collision.gd" id="1_o2lis"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ky5r3"]
size = Vector2(16, 16)

[sub_resource type="CanvasTexture" id="CanvasTexture_o2lis"]

[node name="mud_collision" type="Area2D"]
collision_mask = 3
script = ExtResource("1_o2lis")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(8, 8)
shape = SubResource("RectangleShape2D_ky5r3")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0.352941, 0.262745, 0.258824, 1)
scale = Vector2(16, 16)
texture = SubResource("CanvasTexture_o2lis")
centered = false

[node name="Timer" type="Timer" parent="."]
wait_time = 0.125
autostart = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
